# Raytracer

./: CMakeLists.txt  README.md  commands.txt  execute.sh  image.ppm  input.txt  test1.ppm  test2.ppm  test3.ppm  test4.in  test4.ppm  test5.in  test5.ppm  test6.in  test6.ppm
include/: camera.hpp  color.hpp  constants.hpp  interval.hpp  material.hpp  object.hpp  ray.hpp  texture.hpp  vec3.hpp  world.hpp
src/: camera.cpp  color.cpp  interval.cpp  main.cpp  material.cpp  object.cpp  texture.cpp  world.cpp
